# DADJoksss

./: .gitignore  CLAUDE.md  PROJECT_CONTEXT.md  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts
.github/workflows/: ingest.yml
dad-jokes-ingest/: .env.example  .gitignore  README.md  import_raw.py  pyproject.toml  sources.example.json
dad-jokes-ingest/src/dadjokes_ingest/: cli.py  extractor.py  models.py  normalizer.py  pipeline.py  scraper.py  sources.py  supabase_client.py
dad-jokes-ingest/tests/: test_extractor.py  test_normalizer.py  test_sources.py
dad-jokes-web/: .gitignore  PROJECT_CONTEXT.md  README.md  jokes_raw.txt  next.config.ts  package.json  tsconfig.tsbuildinfo
dad-jokes-web/docs/: grok-joke-fetching-architecture.md  ingestion-repo-split.md  schema-migration-smoke-test.sql  schema-migration.sql  schema-patch-001-browser-fetch-mode.sql
dad-jokes-web/scripts/: seed-jokes.ts
dad-jokes-web/src/: test-globals.d.ts
dad-jokes-web/src/app/: layout.tsx  page.tsx
dad-jokes-web/src/components/: ABTestPanel.tsx  AnswerOptions.tsx  ServiceWorker.tsx  ShareGifButton.tsx  SwipeStack.tsx  TimerCircle.tsx
public/: manifest.json  sw.js
src/app/: HomeClient.tsx  globals.css  layout.tsx  page.tsx
src/components/: ABTestPanel.tsx  AnswerOptions.tsx  JokeCard.tsx  LanguageFilter.tsx  ServiceWorker.tsx  ShareGifButton.tsx  SwipeStack.tsx
src/data/: jokes.ts
src/hooks/: useCardTimer.ts  useTimer.ts
src/lib/: dashboard-auth.test.ts  generateJokeGif.test.ts  generateJokeGif.ts  store.ts  types.ts
(+40 files in other folders)
